--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,4 @@
-{% load static %}
+{% load staticfiles %}
 <html>
 	<head>
 		<title>Django Blog Project</title>
@@ -8,7 +8,12 @@
 
 	<body>
 		<header>
-			<h1><a href="/">Django Blog</a></h1>
+			<div class="nav-left">
+				<h1><a href="/">Django Blog</a></h1>
+			</div>
+			<div class="nav-right">
+				<a href="{% url 'post_new' %}">+ New Blog Post</a>
+			</div>
 		</header>
 		<div class="container">
 			{% block content %}
